Introduced ConnectionString and Injected it into DbContext.

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "NZWalksConnectionString": "Server=localhost\\SHELOVEE; Database=NZWalksDb; Trusted_Connection=True; TrustedServerCertificate=True"
+  }
 }
