EFcore Add Migration + Updated DB

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=localhost\\SHELOVEE; Database=NZWalksDb; Trusted_Connection=True; TrustedServerCertificate=True"
+    "NZWalksConnectionString": "Server=SHELOVEE; Database=NZWalksDb; Trusted_Connection=True; TrustServerCertificate=True"
   }
 }
